--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-slick": "^1.1.15",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
